--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -607,9 +607,9 @@ body{
 
    .lupa{
      border-top: 1px solid #ccc;
-     border-right: 1px solid #ccc;
+     /* border-right: 1px solid #ccc; */
      border-bottom: 1px solid #ccc;
-     padding: 12px 9px;
+     /* padding: 12px 9px; */
    }
 
    .btnLupa{
