--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,11 +8,11 @@ body{
   font-family: 'Titillium Web', sans-serif;
 }
 
-.container{
+/* .container{
   width: 85vw;
   margin: 0 auto;
   overflow: hidden;
-}
+} */
 
 /* slider mobile */
 
@@ -228,11 +228,11 @@ body{
   width: 100%;
 }
 
-.container-total{
+/* .container-total{
   width: 100%;
   background-color: #ededed;
   margin-top: 20px;
-}
+} */
 
 .fondogris{
   background-color: #e2e2e2;
@@ -773,11 +773,11 @@ body{
     border: 1px solid #1b5dc6;
   }
 
-  .container-total{
+  /* .container-total{
     width: 100%;
     background-color: #ededed;
     margin-top: 20px;
-  }
+  } */
 
   .justificar{
     display: flex;
